# litoka

./: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
client/: .eslintrc  App.tsx  Player.tsx  api-app.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/src/: App.tsx  api-app.ts  main.tsx  router.tsx
client/src/core/: Menu.tsx  MenuList.tsx
client/src/core/auth/: AuthField.tsx  AuthPage.tsx  api-auth.ts
client/src/main/home/: Home.tsx
client/src/types/: api-types.ts
client/types/: api-types.ts
config/: config.ts
public/: index.html
server/: Cargo.toml  api-controller.ts  chat-parser.ts  command-parser.ts  express.ts  processor.ts  server-types.ts  server.ts  twitch-websocket.ts  twitchws-controller.ts  websocket-map.ts  websocket.ts
server/src/: lib.rs  main.rs
server/src/client_websocket/: handler.rs  mod.rs  session_map.rs  shoutout_structs.rs  websocket_route.rs  websocket_server.rs
server/src/db/: db_client.rs  mod.rs
server/src/db/functions/: clips.rs  games.rs  mod.rs  users.rs
server/src/db/model/: clip.rs  game.rs  mod.rs  user.rs
server/src/irc_processor/: command_parser.rs  message_parser.rs  mod.rs
server/src/irc_processor/commands/: shoutout.rs
server/src/routes/: api_routes.rs  index_routes.rs  mod.rs
server/src/twitch_api/: api_clips.rs  api_games.rs  api_users.rs  mod.rs  twitch_api_controller.rs
server/src/twitch_websocket/: handler.rs  mod.rs  twitch_ws.rs
server/types/: server-types.ts
types/: server-types.ts  twitch-api-types.ts
(+14 files in other folders)
