[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", features = ["rustls"] }
actix-files = "0.6.2"
actix-ws = "0.2.5"
actix-codec = "0.5.0"
actix-http = "3.2.2"
awc = { version = "3.0.1", features = ["rustls"] }
rustls = "0.20.6"

log = "0.4.17"
env_logger = "0.9.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
tokio = { version = "1.13.1", features = ["rt", "macros", "sync", "time"] }
rand = "0.8"
regex = "1.7.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng"
]